--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,12 +1,13 @@
 .profile__container {
   display: flex;
-  align-items: center;
   gap: 30px;
 }
 
 @media screen and (max-width: 800px) {
   .profile__container {
     flex-direction: column;
-    gap: 22px;
+    justify-content: center;
+    align-items: center;
+    gap: 26px;
   }
 } 
