--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,10 +1,8 @@
 .popup__close-button {
-  position: absolute;
   display: inline-block;
   width: 32px;
   height: 32px;
-  top: 155px;
-  right: 0;
+  align-self: flex-end;
   background-color: transparent;
   background-image: url('../../../images/close-icon.svg');
   background-position: center;
