--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,19 +1,20 @@
 .popup__form {
-  width: 510px;
+  width: 430px;
+  height: 330px;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  position: fixed;
+  position: relative;
   box-sizing: border-box;
-  margin: 0 auto;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 34px 36px;
 }
 
 @media screen and (max-width: 549px) {
   .popup__form {
     width: 282px;
+    height: 322px;
+    padding: 25px 22px;
   }
 }
