--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,8 +2,8 @@
   display: grid;
   justify-self: flex-start;
   grid-template-columns: 1fr 24px;
-  gap: 16px 18px;
-  padding: 22px 0 25px 0;
+  gap: 6px 18px;
+  padding: 22px 0;
 }
 
 @media screen and (max-width: 800px) {
@@ -12,7 +12,7 @@
     max-width: 100%;
     grid-template-columns: 1fr 18px;
     padding: 0;
-    gap: 14px 10px;
-    justify-content: center;
+    gap: 8px 10px;
+    align-items: center;
   }
 } 
