--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,7 @@
   display: flex;
   background-color: #fff;
   flex-direction: column;
+  position: relative;
   max-width: 282px;
   border-radius: 10px;
   overflow: hidden;
