--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,20 +9,18 @@
   line-height: 17px;
   color: #000;
   margin: 0;
-  padding: 0;
+  padding: 0 0 6px;
   border: none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin-bottom: 25px;
-  padding-bottom: 6px;
+
+}
+.popup__input:focus {
+  outline: 1px blue;
 }
 
-.popup__input:last-of-type {
-  margin-bottom: 44px;
-}
-
-@media screen and (max-width: 549px) {
+/*@media screen and (max-width: 549px) {
    .popup__input:last-of-type {
     margin-bottom: 46px;
   }
-}
+}*/
