--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,6 +1,6 @@
 .popup__form {
   width: 430px;
-  height: 330px;
+  min-height: 330px;
   display: flex;
   position: relative;
   box-sizing: border-box;
@@ -14,7 +14,7 @@
 @media screen and (max-width: 549px) {
   .popup__form {
     width: 282px;
-    height: 322px;
+    min-height: 322px;;
     padding: 25px 22px;
   }
 }
