--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -14,7 +14,7 @@
 @media screen and (max-width: 549px) {
   .popup__form {
     width: 282px;
-    min-height: 322px;;
+    min-height: 322px;
     padding: 25px 22px;
   }
 }
