--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 .page{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;background-color:#000;box-sizing:border-box;font-family:Inter,Arial,Helvetica,sans-serif;margin:0;min-width:320px;padding:0;text-rendering:optimizeLegibility;width:100%}
 .header{align-items:center;border-bottom:1px solid #545454;box-sizing:border-box;display:flex;justify-content:space-between;list-style-type:none;margin:0 auto 40px;max-width:880px;padding-top:45px;width:100%}@media screen and (max-width:1023px){.header{width:calc(100% - 144px)}}@media screen and (max-width:767px){.header{width:calc(100% - 72px)}}@media screen and (max-width:424px){.header{padding-top:28px;width:100%}}
 .header__logo{margin:0 0 41px;max-width:142px}@media screen and (max-width:800px){.header__logo{margin:0 0 32px 27px;max-width:104px}}
-.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .3s;visibility:hidden;width:100%}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .2s;visibility:hidden;width:100%}
 .popup__form{background-color:#fff;border-radius:10px;box-sizing:border-box;display:flex;flex-direction:column;justify-content:space-between;min-height:330px;padding:34px 36px;position:relative;width:430px}@media screen and (max-width:549px){.popup__form{min-height:322px;padding:25px 22px;width:282px}}
 .popup_opened{opacity:1;visibility:visible}
 .popup__container{align-items:center;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;margin:0 auto;position:fixed}@media screen and (max-width:549px){.popup__container{width:282px}}
@@ -18,11 +18,12 @@
 .popup__image-container{display:flex;flex-direction:column;margin:0;position:relative}
 .popup__image{margin:0 40px;max-height:75vh;max-width:75vw}@media screen and (max-width:549px){.popup__image{margin:0}}
 .popup__image-caption{color:#fff;font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin-left:40px;margin-top:10px}@media screen and (max-width:549px){.popup__image-caption{margin-left:0}}
-.popup_type_image{background-color:rgba(0,0,0,.9);transition:all .5s linear}
-.popup_type_add-card{transition:all .5s linear}
-.popup_type_edit-profile{transition:all .5s linear}
+.popup_type_image{background-color:rgba(0,0,0,.9);transition:all .2s linear}
+.popup_type_add-card{transition:all .2s linear}
+.popup_type_edit-profile{transition:all .2s linear}
 .profile{align-items:center;display:flex;gap:20px;justify-content:space-between;margin:0 auto 50px;max-width:880px}@media screen and (max-width:1023px){.profile{width:calc(100% - 144px)}}@media screen and (max-width:800px){.profile{flex-direction:column;gap:0;justify-content:center;margin:0 auto 37px;width:calc(100% - 72px)}}@media screen and (max-width:424px){.profile{width:calc(100% - 38px)}}
-.profile__image{border-radius:50%;height:120px;width:120px}
+.profile__avatar-button{background-color:rgba(0,0,0,.8);background-image:url(93c771f5f8582261951d.png);background-position:50%;background-repeat:no-repeat;background-size:26px;border-radius:50%;height:125px;opacity:0;padding:0;position:absolute;transition:opacity .2s ease-in;width:125px;z-index:2}.profile__avatar-button:hover{cursor:pointer;opacity:1}@media screen and (max-width:800px){.profile__avatar-button{top:142px}}@media screen and (max-width:424px){.profile__avatar-button{top:125px}}
+.profile__image{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px;z-index:1}
 .profile__container{display:flex;gap:30px}@media screen and (max-width:800px){.profile__container{align-items:center;flex-direction:column;gap:26px;justify-content:center}}
 .profile__info{display:grid;gap:6px 18px;grid-template-columns:1fr 24px;justify-self:flex-start;padding:22px 0}@media screen and (max-width:800px){.profile__info{align-items:center;gap:8px 10px;grid-area:content;grid-template-columns:1fr 18px;max-width:100%;padding:0}}
 .profile__name{align-self:end;color:#fff;font-family:Inter,Arial,Helvetica,sans-serif;font-size:42px;font-style:normal;font-weight:500;line-height:1.14;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:800px){.profile__name{font-size:27px;line-height:1.22;padding-left:28px;text-align:center}}
@@ -35,7 +36,9 @@
 .element__image{cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
 .element__title{color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:1.21;margin:0;max-width:calc(100% - 40px);overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .element__sign{align-items:center;display:flex;justify-content:space-between;max-width:246px;padding:25px 21px}
+.element__like-list{align-items:center;display:flex;flex-direction:column}
 .element__like-button{background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;padding:0;transition:opacity .3s ease;width:22px}.element__like-button:hover{opacity:.5}
+.element__like-count{font-size:13px;line-height:15.73px;margin:0}
 .element__like-button_active{background-image:url(fe17a515669479b1e649.svg)}
 .element__delete-button{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;transition:opacity .3s ease;width:18px}.element__delete-button:hover{opacity:.5}
 .footer{margin:0 auto;max-width:880px;padding-bottom:60px}@media screen and (max-width:1023px){.footer{width:calc(100% - 144px)}}@media screen and (max-width:767px){.footer{padding-bottom:36px;width:calc(100% - 72px)}}@media screen and (max-width:424px){.footer{width:calc(100% - 38px)}}
