--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,8 +25,10 @@
 @import url(../blocks/popup/__type/popup__type_image.css);
 @import url(../blocks/popup/__type/popup__type_add-card.css);
 @import url(../blocks/popup/__type/popup__type_edit-profile.css);
+@import url(../blocks/popup/__type/popup__tipe_image.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar_button/profile__avatar-button.css);
 @import url(../blocks/profile/__image/profile__image.css);
 @import url(../blocks/profile/__container/profile__container.css);
 @import url(../blocks/profile/__info/profile__info.css);
@@ -41,7 +43,9 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__sign/element__sign.css);
+@import url(../blocks/element/__like-list/element__like-list.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
+@import url(../blocks/element/__like-count/element_like-count.css);
 @import url(../blocks/element/__like-button/_active/element__like-button_active.css);
 @import url(../blocks/element/__delete-button/element__delete-button.css);
 
