--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -1,6 +1,6 @@
 .popup__form {
   width: 430px;
-  min-height: 330px;
+  height: 100%;
   display: flex;
   position: relative;
   box-sizing: border-box;
