--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -47,6 +47,8 @@
 @import url(../blocks/element/__like-count/element_like-count.css);
 @import url(../blocks/element/__like-button/_active/element__like-button_active.css);
 @import url(../blocks/element/__delete-button/element__delete-button.css);
+@import url(../blocks/element/__delete-button/_hidden/element__delete-button_hidden.css);
+
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
