--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .2s;visibility:hidden;width:100%}
 .popup__form{background-color:#fff;border-radius:10px;box-sizing:border-box;display:flex;flex-direction:column;height:100%;justify-content:space-between;padding:34px 36px;position:relative;width:430px}@media screen and (max-width:549px){.popup__form{min-height:322px;padding:25px 22px;width:282px}}
 .popup_opened{opacity:1;visibility:visible}
-.popup__container{align-items:center;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;margin:0 auto;max-width:430px;position:fixed}@media screen and (max-width:549px){.popup__container{width:282px}}
+.popup__container{margin:0;padding:0;position:relative}@media screen and (max-width:549px){.popup__container{width:282px}}
 .popup__title{color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:1.21;margin:0;padding-bottom:44px}@media screen and (max-width:549px){.popup__title{font-size:18px;line-height:1.22;margin:0;padding-bottom:73px;width:238px}}
 .popup__input{border:none;border-bottom:1px solid rgba(0,0,0,.2);box-sizing:border-box;color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:14px;font-style:normal;font-weight:400;height:100%;line-height:17px;margin:0;outline:none;padding:0 0 6px;width:100%}.popup__input:focus{outline:1px blue}
 .popup__input-error{color:red;display:flex;flex-direction:column;font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;font-style:normal;font-weight:400;justify-content:center;line-height:15px;margin:0;min-height:30px;opacity:0;overflow:visible;padding:0;position:relative}
@@ -14,9 +14,9 @@
 .popup__input_type_error{border-bottom:1px solid red}
 .popup__submit-button{align-items:center;background-color:#000;border-radius:2px;border-width:0;box-shadow:none;color:#fff;cursor:pointer;display:flex;font-family:Inter,Arial,Helvetica,sans-serif;font-size:18px;font-style:normal;font-weight:400;height:50px;justify-content:center;line-height:1.22;margin:15px 0 0;padding:14px 125px;position:relative;text-align:center;transition:opacity .3s ease;width:100%}.popup__submit-button:hover{opacity:.8}.popup__submit-button:disabled{background-color:#fff;border:1px solid #000;color:#000;opacity:.2}@media screen and (max-width:549px){.popup__submit-button{font-size:14px;height:46px;line-height:1.21;padding:14px 82px;width:238px}}
 .popup__submit-button_inactive{background-color:transparent;border:1px solid #000;color:#000;opacity:.2;pointer-events:none}
-.popup__close-button{align-self:flex-end;background-color:transparent;background-image:url(2ceb783afbab75916ddc.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;display:inline-block;height:32px;margin:0 -40px 8px 0;padding:0;transition:opacity .3s ease;width:32px}.popup__close-button:hover{opacity:.6}@media screen and (max-width:549px){.popup__close-button{height:20px;margin:0 0 16px;top:87px;width:20px}}
+.popup__close-button{align-self:flex-end;background-color:transparent;background-image:url(2ceb783afbab75916ddc.svg);background-position:50%;background-repeat:no-repeat;background-size:32px;background-size:contain;cursor:pointer;display:inline-block;height:32px;right:-40px;top:-40px;transition:opacity .3s ease;width:32px}.popup__close-button:hover{opacity:.6}@media screen and (max-width:549px){.popup__close-button{height:20px;margin:0 0 16px;top:87px;width:20px}}
 .popup__image-container{display:flex;flex-direction:column;margin:0;position:relative}
-.popup__image{margin:0 40px;max-height:75vh;max-width:75vw}@media screen and (max-width:549px){.popup__image{margin:0}}
+.popup__image{display:block;max-height:75vh;max-width:75vw;min-width:282px;-o-object-fit:cover;object-fit:cover}@media screen and (max-width:549px){.popup__image{margin:0}}
 .popup__image-caption{color:#fff;font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin-left:40px;margin-top:10px}@media screen and (max-width:549px){.popup__image-caption{margin-left:0}}
 .popup_type_image{background-color:rgba(0,0,0,.9);transition:all .2s linear}
 .popup_type_add-card{transition:all .2s linear}
@@ -41,6 +41,7 @@
 .element__like-count{font-size:13px;line-height:15.73px;margin:0}
 .element__like-button_active{background-image:url(fe17a515669479b1e649.svg)}
 .element__delete-button{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;transition:opacity .3s ease;width:18px}.element__delete-button:hover{opacity:.5}
+.element__delete-button_hidden{display:none}
 .footer{margin:0 auto;max-width:880px;padding-bottom:60px}@media screen and (max-width:1023px){.footer{width:calc(100% - 144px)}}@media screen and (max-width:767px){.footer{padding-bottom:36px;width:calc(100% - 72px)}}@media screen and (max-width:424px){.footer{width:calc(100% - 38px)}}
 .footer__copyright{color:#545454;font-family:Inter,Arial,Helvetica,sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:1.22;margin:0}@media screen and (max-width:800px){.footer__copyright{font-size:14px;line-height:1.21}}
 
