--- a/src/blocks/popup/___image/popup__image.css
+++ b/src/blocks/popup/___image/popup__image.css
@@ -1,10 +1,11 @@
 .popup__image {
   max-width: 75vw;
   max-height: 75vh;
-  /*margin: 0 40px;*/
+  margin: 0;
   display: block;
   min-width: 282px;
   object-fit: cover;
+  justify-self: center;
 }
 
 @media screen and (max-width: 549px) {
