--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,5 @@
 .popup__close-button {
-  /*display: inline-block;
+  display: inline-block;
   width: 32px;
   height: 32px;
   align-self: flex-end;
@@ -12,24 +12,10 @@
   padding: 0;
   margin: 0 -40px 8px 0;
   cursor: pointer;
-  transition: opacity .3s ease;*/
-  display: inline-block;
-  background-size: 32px;
-  right: -40px;
-  top: -40px;
-  width: 32px;
-  height: 32px;
-  align-self: flex-end;
-  background-color: transparent;
-  background-image: url('../../../images/close-icon.svg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  transition: opacity .3s ease;
-  cursor: pointer;
+  transition: opacity 0.3s ease;
 }
 
-.popup__close-button:hover{
+.popup__close-button:hover {
   opacity: 0.6;
 }
 
