--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,20 +1,16 @@
 .popup__container {
-  margin: 0;
-  padding: 0;
-  position: relative;
-/*  display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: fixed;
   box-sizing: border-box;
   margin: 0 auto;
-  width: 430px;*/
-  
+  min-width: 430px;
 }
 
 @media screen and (max-width: 549px) {
   .popup__container {
-    width: 282px;
+    min-width: 282px;
   }
 }
