--- a/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -17,13 +17,13 @@
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #000;
   cursor: pointer;
-  transition: opacity .3s ease;
+  transition: opacity 0.5s ease;
 }
 
-.popup__submit-button:hover{
+.popup__submit-button:hover {
   opacity: 0.8;
 }
 
@@ -31,7 +31,7 @@
   background-color: #fff;
   border: 1px solid #000;
   color: #000;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 @media screen and (max-width: 549px) {
