--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -2,7 +2,7 @@
   visibility: hidden;
   opacity: 0;
   display: flex;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -10,5 +10,5 @@
   left: 0;
   justify-content: center;
   align-items: center;
-  transition: all .2s;
+  transition: all 0.5s;
 }
